--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,24 @@
         android:theme="@style/Theme.SchoolResultsManagementApp"
         tools:targetApi="31">
         <activity
+            android:name=".admin.StudentResultsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".admin.ViewResultsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".admin.ResultsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SelectUserActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".teacher.ManageResultsActivity"
             android:exported="false" />
         <activity
