--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.SchoolResultsManagementApp"
         tools:targetApi="31">
         <activity
+            android:name=".admin.ViewReportActivity"
+            android:exported="false" />
+        <activity
+            android:name=".admin.StudentReportActivity"
+            android:exported="false" />
+        <activity
+            android:name=".admin.GradingSystemActivity"
+            android:exported="false" />
+        <activity
             android:name=".admin.StudentResultsActivity"
             android:exported="false" />
         <activity
