--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:theme="@style/Theme.SchoolResultsManagementApp"
         tools:targetApi="31">
         <activity
+            android:name=".Student.StudentDashboardActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Student.StudentLoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".admin.AdminLoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".teacher.TeacherLoginActivity"
+            android:exported="false" />
+        <activity
             android:name=".admin.FinalReportActivity"
             android:exported="false" />
         <activity
@@ -59,13 +71,11 @@
             android:exported="false" />
         <activity
             android:name=".admin.MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:exported="false"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+
+
+
     </application>
 
 </manifest>
