--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,5 +40,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
+    implementation 'com.google.firebase:firebase-storage:21.0.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 
 }
