--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,15 +5,17 @@
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
+        android:enableOnBackInvokedCallback="true"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_logo_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SchoolResultsManagementApp"
-        tools:targetApi="tiramisu"
-        android:enableOnBackInvokedCallback="true"
-        >
+        tools:targetApi="tiramisu">
+        <activity
+            android:name=".admin.NewCurriculumReport"
+            android:exported="false" />
         <activity
             android:name=".Student.StudentDashboardActivity"
             android:exported="false" />
@@ -64,11 +66,7 @@
             android:exported="false" />
         <activity
             android:name=".admin.MainActivity"
-            android:exported="false"/>
-
-
-
-
+            android:exported="false" />
     </application>
 
 </manifest>
